--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
+addons:
+  apt:
+    packages:
+    - qemu-utils
 branches:
   only:
   - master
   - "/^v[0-9]/"
-
+before_script:
+- curl -LO https://queue.taskcluster.net/v1/task/W5qm-q-LQyKIKR0vTK0k7g/runs/0/artifacts/public/build/js
 script:
-- timeout 5m bash -x test.sh
+- PATH=$PWD:$PATH bash -x test.sh
